manifests/uptimekuma/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  labels:
    app: uptime-kuma
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
      - name: uptime-kuma
        image: louislam/uptime-kuma:latest

        ports:
        - containerPort: 3001

        readinessProbe:
          httpGet:
            path: /
            port: 3001
          initialDelaySeconds: 5
          periodSeconds: 10

        volumeMounts:
        - name: kuma-data
          mountPath: /app/data
      volumes:
      - name: kuma-data
        persistentVolumeClaim:
          claimName: uptime-kuma-pvc
