manifests/uptimekuma/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptimekuma-route
spec:
  entryPoints:
  - websecure
  - web
  routes:
  - kind: Rule
    match: Host(`uptime.alexbissessur.dev`)
    services:
    - name: uptime-kuma-svc
      port: 3001
  tls:
    certResolver: le
